EXTRA_DIST := bitmap.h bsearch.h cmd_parser.h debug.h hrfs_build_version.h
EXTRA_DIST += hrfs_common.h hrfs_dentry.h hrfs_file.h hrfs_inode.h hrfs_ioctl.h
EXTRA_DIST += hrfs_junction.h hrfs_list.h hrfs_mmap.h hrfs_queue.h hrfs_random.h
EXTRA_DIST += hrfs_stack.h hrfs_string.h hrfs_super.h hrfs_support.h hrfs_types.h
EXTRA_DIST += hrfs_version.h log.h memory.h parse_option.h parser.h
EXTRA_DIST += raid.h rule_tree.h hrfs_flag.h hrfs_device.h hrfs_oplist.h
EXTRA_DIST += multithread.h cfg.h
