EXTRA_DIST := bitmap.h bsearch.h cmd_parser.h debug.h mtfs_build_version.h
EXTRA_DIST += mtfs_common.h mtfs_dentry.h mtfs_file.h mtfs_inode.h mtfs_ioctl.h
EXTRA_DIST += mtfs_junction.h mtfs_list.h mtfs_mmap.h mtfs_queue.h mtfs_random.h
EXTRA_DIST += mtfs_stack.h mtfs_string.h mtfs_super.h mtfs_support.h mtfs_types.h
EXTRA_DIST += mtfs_version.h log.h memory.h parse_option.h parser.h
EXTRA_DIST += raid.h rule_tree.h mtfs_flag.h mtfs_device.h mtfs_oplist.h
EXTRA_DIST += multithread.h cfg.h compat.h thread.h mtfs_selfheal.h
EXTRA_DIST += proc.h mtfs_heal.h mtfs_lock.h spinlock.h
