EXTRA_DIST := bitmap.h bsearch.h cmd_parser.h debug.h mtfs_build_version.h
EXTRA_DIST += mtfs_common.h mtfs_dentry.h mtfs_file.h mtfs_inode.h mtfs_ioctl.h
EXTRA_DIST += mtfs_junction.h mtfs_list.h mtfs_mmap.h mtfs_queue.h mtfs_random.h
EXTRA_DIST += mtfs_stack.h mtfs_string.h mtfs_super.h mtfs_lowerfs.h mtfs_types.h
EXTRA_DIST += mtfs_version.h memory.h parse_option.h parser.h
EXTRA_DIST += raid.h rule_tree.h mtfs_flag.h mtfs_device.h mtfs_oplist.h
EXTRA_DIST += multithread.h compat.h thread.h mtfs_service.h
EXTRA_DIST += mtfs_heal.h mtfs_lock.h spinlock.h mtfs_io.h mtfs_proc.h
EXTRA_DIST += mtfs_trace.h mtfs_record.h mtfs_subject.h mtfs_async.h
EXTRA_DIST += mtfs_interval_tree.h mtfs_sync_replica.h mtfs_checksum.h
EXTRA_DIST += mtfs_log.h mtfs_context.h
